# surf-spot-finder

./: .gitignore  README.md  README_NEW.md  mkdocs.yml  pyproject.toml
.github/: setup.sh
.github/workflows/: docs.yaml  hf_spaces.yaml  tests.yaml
demo/: Dockerfile  README.md  app.py  constants.py  pickers.py  requirements.txt  streamlit_app.py  utils.py
demo/.streamlit/: config.toml
demo/components/: agent_status.py  inputs.py  sidebar.py
demo/services/: agent.py
docs/: api.md  customization.md  future-features-contributions.md  getting-started.md
examples/: langchain_single_agent.yaml  langchain_single_agent_user_confirmation.yaml  langchain_single_agent_vertical.yaml  llama_index_single_agent.yaml  llama_index_single_agent_vertical.yaml  multi_agent.yaml  openai_multi_agent.yaml  openai_single_agent.yaml  openai_single_agent_user_confirmation.yaml  openai_single_agent_vertical.yaml  single_agent_user_confirmation.yaml  single_agent_with_tools.yaml  smolagents_single_agent.yaml  smolagents_single_agent_mcp.yaml  smolagents_single_agent_user_confirmation.yaml  smolagents_single_agent_vertical.yaml
notebooks/experiment/: compare.ipynb
notebooks/experiment/agent_configs/: langchain-4o-mini.yaml  langchain-4o.yaml  openai-4o-mini.yaml  openai-4o.yaml  openai-o1.yaml  openai-o3-mini.yaml  smolagents-4o-mini.yaml  smolagents-4o.yaml  smolagents-o1.yaml  smolagents-o3-mini.yaml  smolagents-ollama-llama3.1-8b-fp16.yaml  smolagents-ollama-llama3.1-8b-q4.yaml
notebooks/experiment/test_cases/: alpha.yaml
src/surf_spot_finder/: cli.py  config.py  no_framework.py  tracing.py
src/surf_spot_finder/agents/: __init__.py  langchain.py  openai.py  smolagents.py
src/surf_spot_finder/agents/prompts/: smolagents.py
src/surf_spot_finder/evaluation/: __init__.py  evaluate.py  main.py  results_saver.py  telemetry_utils.py  test_case.py  utils.py
src/surf_spot_finder/evaluation/evaluators/: CheckpointEvaluator.py  HypothesisEvaluator.py  LLMEvaluator.py  QuestionAnsweringSquadEvaluator.py
src/surf_spot_finder/evaluation/telemetry/: langchain_telemetry.py  openai_telemetry.py  smolagents_telemetry.py  telemetry.py
src/surf_spot_finder/evaluation/test_cases/: alpha.yaml
src/surf_spot_finder/instructions/: openai.py
src/surf_spot_finder/prompts/: openai.py  shared.py
src/surf_spot_finder/tools/: __init__.py  openmeteo.py  openstreetmap.py
tests/integration/agents/: test_integration_openai.py  test_integration_smolagents.py
tests/unit/: test_unit_tracing.py
tests/unit/agents/: test_load_smolagents.py  test_unit_langchain.py  test_unit_openai.py  test_unit_smolagents.py
tests/unit/tools/: test_unit_openmeteo.py  test_unit_openstreetmap.py
