[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "surf-spot-finder"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "fire",
  "loguru",
  "opentelemetry-exporter-otlp",
  "opentelemetry-sdk",
  "pydantic",
]

[project.optional-dependencies]
langchain = [
  "langchain",
  "langgraph",
  "langchain-openai>=0.3.9",
  "langchain-ollama>=0.3.0",
  "openinference-instrumentation-langchain"
]
smolagents = [
  "smolagents[litellm]>=1.10.0",
  "openinference-instrumentation-smolagents>=0.1.4"
]

openai = [
  "openai-agents",
  "openinference-instrumentation-openai-agents>=0.1.2"
]

mcp = [
  "mcp==1.3.0",
]

demo = [
  "gradio",
  "spaces"
]

docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]

tests = [
  "pytest>=8,<9",
  "pytest-sugar>=0.9.6",
  "debugpy>=1.8.13",
]

# TODO maybe we don't want to keep this, or we want to swap this to Lumigator SDK
arize = [
  "arize-phoenix>=8.12.1",
]

[project.urls]
Documentation = "https://mozilla-ai.github.io/surf-spot-finder/"
Issues = "https://github.com/mozilla-ai/surf-spot-finder/issues"
Source = "https://github.com/mozilla-ai/surf-spot-finder"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
where = ["src"]
namespaces = false

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]

[project.scripts]
surf-spot-finder = "surf_spot_finder.cli:main"
surf-spot-finder-evaluate = "surf_spot_finder.evaluation.evaluate:main"
# TODO maybe this would be lumigator
start-phoenix = "phoenix.server.main:main"
