[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "surf-spot-finder"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "any-agent  @ git+ssh://git@github.com/mozilla-ai/any-agent",
  "fire",
  "loguru",
  "pydantic",
  "pyyaml",
]

[project.optional-dependencies]
demo = [
  "gradio",
  "spaces"
]

docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]

tests = [
  "pytest>=8,<9",
  "pytest-sugar>=0.9.6",
  "debugpy>=1.8.13",
  "evaluate>=0.4.3",
]

[project.urls]
Documentation = "https://mozilla-ai.github.io/surf-spot-finder/"
Issues = "https://github.com/mozilla-ai/surf-spot-finder/issues"
Source = "https://github.com/mozilla-ai/surf-spot-finder"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
where = ["src"]
namespaces = false

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]

[project.scripts]
surf-spot-finder = "surf_spot_finder.cli:main"
surf-spot-finder-evaluate = "surf_spot_finder.evaluation.evaluate:main"
# TODO maybe this would be lumigator
start-phoenix = "phoenix.server.main:main"
