[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "surf-spot-finder"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "any-agent[all]",
  "fire",
  "loguru",
  "pydantic",
  "pyyaml",
  "litellm",
]

[project.optional-dependencies]
demo = [
  "gradio",
  "spaces"
]

docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]

tests = [
  "pytest>=8,<9",
  "pytest-sugar>=0.9.6",
  "debugpy>=1.8.13",
  "evaluate>=0.4.3",
]

dev = [
  "pre-commit>=4.1.0",
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
]

[project.urls]
Documentation = "https://mozilla-ai.github.io/surf-spot-finder/"
Issues = "https://github.com/mozilla-ai/surf-spot-finder/issues"
Source = "https://github.com/mozilla-ai/surf-spot-finder"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
where = ["src"]
namespaces = false

[tool.setuptools_scm]

[project.scripts]
surf-spot-finder = "surf_spot_finder.cli:main"
surf-spot-finder-no-framework = "surf_spot_finder.no_framework:main"
surf-spot-finder-evaluate = "surf_spot_finder.evaluation.main:main"
